--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.3.1",
+    "formik": "^1.5.1",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
