--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "2.1.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
+    "styled-components": "^4.1.3",
     "yup": "^0.26.10"
   },
   "scripts": {
