--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link-error": "^1.1.8",
     "apollo-link-http": "^1.5.12",
     "formik": "^1.5.1",
+    "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
