--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "apollo-link-context": "^1.0.15",
     "apollo-link-error": "^1.1.8",
     "apollo-link-http": "^1.5.12",
+    "apollo-link-ws": "^1.0.15",
+    "apollo-utilities": "^1.2.1",
     "formik": "^1.5.1",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
@@ -21,6 +23,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3",
+    "subscriptions-transport-ws": "^0.9.15",
     "yup": "^0.26.10"
   },
   "scripts": {
